--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/layout.css">
+    <link rel="stylesheet" href="./assets/css/tipografia.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&display=swap"
+        rel="stylesheet">
     <title>Portfolio</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <div id="logo"></div>
+            <ul>
+                <li>
+                    <a href="#">HOME</a>
+                </li>
+                <li>
+                    <a href="#">DOMINGO PERFEITO</a>
+                </li>
+                <li>
+                    <a href="#">PIZZA</a>
+                </li>
+                <li>
+                    <a href="#">DEPOIMENTOS</a>
+                </li>
+                <li>
+                    <a href="#">PLANOS</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">CRIAR CONTA</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
