--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav>
             <div id="logo"></div>
-            <ul>
+            <ul id="esquerda">
                 <li>
                     <a href="#">HOME</a>
                 </li>
@@ -37,13 +37,16 @@
                     <a href="#">PLANOS</a>
                 </li>
             </ul>
-            <ul>
+            <ul id="direita">
                 <li>
-                    <a href="#">CRIAR CONTA</a>
+                    <a id="criar-conta" href="#">CRIAR CONTA</a>
                 </li>
             </ul>
         </nav>
     </header>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
