--- a/index.html
+++ b/index.html
@@ -43,7 +43,56 @@
                 </li>
             </ul>
         </nav>
+        <div id="chamada">
+            <h1>SUNDAY PIZZA SUNDAY</h1>
+            <h4>Sua Pizza do Seu Jeito Sem Atrasos </h4>
+            <a href="#">ESCOLHA AGORA MESMO SEU PLANO</a>
+        </div>
     </header>
+
+    <section id="domingo-perfeito">
+        <div id="domingo-perfeito-esquerda">
+            <div class="folha1"></div>
+            <div class="camarao"></div>
+            <div class="folha2"></div>
+        </div>
+        <div id="domingo-perfeito-centro">
+            <h2>Seu Domingo Perfeito</h2>
+            <p class="destaque">Você adora comer pizza aos domingos a noite? <br>
+                Reunir a família, brindar e saborear a pizza do jeito que você gosta. Nós oferecemos a melhor maneira
+                desta pizza chegar quentinha, na hora certa, sem atrasos e do jeito que você gosta.
+            </p>
+            <div id="pontos-chaves-mestre">
+                <div class="pontos-chaves">
+                    <ion-icon name="people-outline"></ion-icon>
+                    <h4>Família</h4>
+                    <p>Reunir a família, brindar e saborear a pizza do jeito que você gosta. Nós oferecemos a melhor
+                        maneira desta pizza chegar quentinha, na hora certa, sem atrasos e do jeito que você gosta.
+                    </p>
+                </div>
+                <div class="pontos-chaves">
+                    <ion-icon name="time-outline"></ion-icon>
+                    <h4>Horário</h4>
+                    <p>Sabe aquela sensação de ficar aguardando a pizza chegar e ela nunca chega? Pois é, aqui sua pizza
+                        chegará sempre no horário programado por você. Nosso intervalo de espera nunca supera 15
+                        minutos.
+                    </p>
+                </div>
+                <div class="pontos-chaves">
+                    <ion-icon name="card-outline"></ion-icon>
+                    <h4>Preço</h4>
+                    <p>Quando o entregador chegar na sua casa, você só recebe, nem precisa pagar. Por um preço justo,
+                        você pagará apenas pela frequência que você deseja receber sua pizza.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div id="domingo-perfeito-direita">
+            <div class="folha3"></div>
+            <div class="tomate"></div>
+            <div class="queijo"></div>
+        </div>
+    </section>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
