--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <div id="teste">1</div>
     <header>
         <nav>
             <div id="logo"></div>
@@ -281,6 +282,20 @@
         </div>
     </section>
 
+    <div id="transicao-testemunho-plano">
+        <div id="decoracao1">
+
+        </div>
+        <div id="decoracao2">
+
+        </div>
+        <div id="decoracao3">
+
+        </div>
+    </div>
+
+    <script src="./assets/jquery/jquery-3.7.1.min.js"></script>
+    <script src="./script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
