--- a/index.html
+++ b/index.html
@@ -294,6 +294,98 @@
         </div>
     </div>
 
+    <section id="plano-principal">
+        <h2>ESCOLHA SEU PLANO</h2>
+        <div id="planos-janela">
+            <div class="planos">
+                <div class="planos-top">
+                    <h4>Plano Ouro</h4>
+                    <p><strong>2 vezes por mês</strong></p>
+                    <ul>
+                        <li>2 pizzas G a sua escolha.</li>
+                        <li>2 Refrigerantes 2L.</li>
+                        <li>Entrega grátis.</li>
+                        <li>Você escolhe os dias e horários.</li>
+                    </ul>
+                    <p><strong>R$ 50,00</strong></p>
+                </div>
+                <div class="planos-bottom">
+                    <p>
+                        QUERO ASSINAR
+                    </p>
+                </div>
+            </div>
+            <div class="planos">
+                <div class="planos-top">
+                    <h4>Plano Planinium</h4>
+                    <p>3 vezes por mês</p>
+                    <ul>
+                        <li>3 pizzas G a sua escolha.</li>
+                        <li>3 Refrigerantes 2L.</li>
+                        <li>Entrega grátis.</li>
+                        <li>Você escolhe os dias e horários.</li>
+                    </ul>
+                    <p><strong>R$ 70,00</strong></p>
+                </div>
+                <div class="planos-bottom">
+                    <p>
+                        QUERO ASSINAR
+                    </p>
+                </div>
+            </div>
+            <div class="planos">
+                <div class="planos-top">
+                    <h4>Plano Black</h4>
+                    <p>4 vezes por mês</p>
+                    <ul>
+                        <li>4 pizzas G a sua escolha.</li>
+                        <li>4 Refrigerantes 2L.</li>
+                        <li>1 surpresa por mês</li>
+                        <li>Entrega grátis.</li>
+                        <li>Você escolhe os dias e horários.</li>
+                    </ul>
+                    <p><strong>R$ 120,00</strong></p>
+                </div>
+                <div class="planos-bottom">
+                    <p>
+                        QUERO ASSINAR
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div id="transicao-plano-rodape">
+
+    </div>
+    <footer>
+        <div id="mapa">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15896.306393891138!2d-42.8229670879927!3d-5.091316345042273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x78e37624e0d4861%3A0x6dbea63256fb51b2!2sCentro%20(Sul)%2C%20Teresina%20-%20PI!5e0!3m2!1spt-BR!2sbr!4v1709485421543!5m2!1spt-BR!2sbr"
+                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div id="info">
+            <h4>Endereço e Telefone</h4>
+            <ul>
+                <li>AVENIDA MIGUEL ROSA, 100</li>
+                <li>Teresina-PI</li>
+                <li>CEP: 01.150</li>
+                <li>Fone: (86) 99999-9999</li>
+            </ul>
+            <div id="redes-sociais">
+                <ion-icon id="instagram" name="logo-instagram"></ion-icon>
+                <ion-icon name="logo-twitter"></ion-icon>
+                <ion-icon name="logo-youtube"></ion-icon>
+                <ion-icon name="logo-linkedin"></ion-icon>
+                <ion-icon name="logo-facebook"></ion-icon>
+            </div>
+        </div>
+        <div id="pizza-rodape-decoracao">
+
+        </div>
+    </footer>
+
     <script src="./assets/jquery/jquery-3.7.1.min.js"></script>
     <script src="./script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
